# texflow-mcp

./: .gitignore  ADVANCED_FEATURES.md  CLAUDE.md  CONTRIBUTING.md  CURRENT_ARCHITECTURE.md  DOCUMENT_CONVERSION_DUPLICATION_ANALYSIS.md  DOCUMENT_OPERATION_REFACTOR_EXAMPLE.py  EXAMPLE_CONVERSION_SERVICE.py  LICENSE  LONG_FORM_ENHANCEMENTS.md  MANIFEST.in  MCP_SYNERGIES.md  README.md  REFACTORING_PLAN.md  REFACTORING_STATUS.md  REFACTORING_SUMMARY.md  SECURITY_REPORT.md  TEXFLOW_EXPORT_ERROR_SUMMARY.md  VALIDATION_PARAMETER_FIX.md  cups_mcp.py  document_operation_convert_fix.patch  economic_parallels_2025.tex  latex_templates.py  main.py  pyproject.toml  requirements.txt  run_server.sh  system_dependencies_report.json  test_mcp_resources.py  test_mcp_server.py  test_package_discovery.py  test_security.py  test_semantic_integration.py  test_semantic_operations.py  test_semantic_workflow.py  test_system_checker.py  test_templates.py  test_texflow_server.py  texflow.py  texflow_advanced.py  (+5 more)
config/: __init__.py  personalities.json  system_dependencies.json  workflows.json
docs/: ARCHITECTURE.md  COLLABORATIVE_EDITING.md  COMPLETE_WORKFLOW_EXAMPLE.md  ENHANCED_TOOL_GROUPING.md  EXPORT_FORMAT_FIX.md  LATEX_REFERENCE_DESIGN.md  MIGRATION_GUIDE.md  RECIPE_BOOK_EXAMPLE.md  SEMANTIC_ARCHITECTURE.md  SEMANTIC_USAGE_EXAMPLES.md  SYSTEM_DEPENDENCIES.md  TEXFLOW_REFERENCE.md  TOOL_GROUPING.md  TOOL_MAPPING.md  TOOL_REFERENCE.md  UNIFIED_TOOL_REFERENCE.md  latex-reference-data-acquisition.md  latex-reference-implementation-plan.md  latex-reference-search-design.md
src/: __init__.py  (+1 more)
(+33 files in other folders)
