[project]
name = "texflow"
version = "0.2.0"
description = "TeXFlow - A document authoring and composition MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.1",
    "pillow>=11.2.1",
    "pycups>=2.0.4",
    "python-magic>=0.4.27",
]

[project.scripts]
texflow = "texflow:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
