[project]
name = "texflow"
version = "0.2.0"
description = "TeXFlow - A document authoring and composition MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.1",
    "pillow>=11.2.1",
    "pycups>=2.0.4",
    "python-magic>=0.4.27",
]

[project.scripts]
texflow = "texflow_semantic_unified:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.core", "src.features", "src.features.document", "src.features.organizer", "src.features.output", "src.features.project", "src.features.archive"]
py-modules = ["texflow", "texflow_semantic_unified"]
